--- a/heritage-app/index.html
+++ b/heritage-app/index.html
@@ -7,7 +7,7 @@
     <title>Heritage</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root" style="min-width: 100vw; padding: 0px;"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
